# flake8-exhaustive-match

./: .gitignore  README.md  pyproject.toml
flake8_exhaustive_match/: plugin.py
tests/: test_plugin.py
