[tool.poetry]
name = "flak8-exhaustive-match"
version = "0.1.0"
description = ""
authors = ["Conrado Garcia Berrotaran <conradogarciab@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-pretty = "^1.2.0"
ipdb = "^0.13.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
